--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Moments of Motherhood Recorder</title>
   <style>
     body {
@@ -9,19 +10,27 @@
       text-align: center;
       background-color: #fffaf7;
       padding: 20px;
+      max-width: 600px;
+      margin: auto;
     }
 
     video, audio {
       margin: 20px auto;
       display: block;
-      max-width: 90%;
+      max-width: 100%;
       border-radius: 12px;
+    }
+
+    div {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
     }
 
     button {
       font-size: 16px;
       padding: 10px 20px;
-      margin: 8px 4px;
       border-radius: 8px;
       border: none;
       background-color: #e0e0e0;
@@ -70,6 +79,7 @@
     let stream = null;
     let isRecording = false;
     let usingCamera = false;
+    let recordedBlob = null;
 
     const preview = document.getElementById("preview");
     const playback = document.getElementById("playback");
@@ -81,7 +91,6 @@
     const submitBtn = document.getElementById("submitBtn");
     const statusText = document.getElementById("statusText");
 
-    // Fully stop and clean up media stream
     function stopStreamTracks() {
       if (stream) {
         stream.getTracks().forEach(track => track.stop());
@@ -92,7 +101,6 @@
       }
     }
 
-    // CAMERA TOGGLE
     toggleCameraBtn.onclick = async () => {
       if (stream) {
         stopStreamTracks();
@@ -115,7 +123,6 @@
       }
     };
 
-    // START RECORDING
     startBtn.onclick = async () => {
       if (!stream) {
         try {
@@ -133,8 +140,8 @@
       mediaRecorder = new MediaRecorder(stream);
       mediaRecorder.ondataavailable = e => chunks.push(e.data);
       mediaRecorder.onstop = () => {
-        const blob = new Blob(chunks, { type: "video/webm" });
-        playback.src = URL.createObjectURL(blob);
+        recordedBlob = new Blob(chunks, { type: "video/webm" });
+        playback.src = URL.createObjectURL(recordedBlob);
         playback.classList.remove("hidden");
         preview.classList.add("hidden");
         submitBtn.disabled = false;
@@ -151,7 +158,6 @@
       statusText.textContent = "Recording...";
     };
 
-    // PAUSE
     pauseBtn.onclick = () => {
       if (!mediaRecorder) return;
       if (mediaRecorder.state === "recording") {
@@ -165,7 +171,6 @@
       }
     };
 
-    // STOP
     stopBtn.onclick = () => {
       if (mediaRecorder && isRecording) {
         mediaRecorder.stop();
@@ -177,9 +182,9 @@
       }
     };
 
-    // DELETE
     deleteBtn.onclick = () => {
       chunks = [];
+      recordedBlob = null;
       playback.src = "";
       playback.classList.add("hidden");
       submitBtn.disabled = true;
@@ -190,13 +195,29 @@
       startBtn.disabled = false;
       toggleCameraBtn.disabled = false;
 
-      stopStreamTracks(); // kill any open tracks
+      stopStreamTracks();
     };
 
-    // SUBMIT
-    submitBtn.onclick = () => {
-      statusText.textContent = "Redirecting...";
-      window.location.href = "https://momentsofmotherhood.glide.page";
+    submitBtn.onclick = async () => {
+      if (!recordedBlob) return alert("No recording to submit.");
+
+      statusText.textContent = "Uploading...";
+
+      const formData = new FormData();
+      const fileName = `moment-${Date.now()}.webm`;
+      formData.append("file", recordedBlob, fileName);
+
+      try {
+        await fetch("https://hook.eu2.make.com/u3erd1mk1hnfks7v4lsf8ev6w7zstbs1", {
+          method: "POST",
+          body: formData
+        });
+        statusText.textContent = "Uploaded successfully. Redirecting...";
+        window.location.href = "https://momentsofmotherhood.glide.page";
+      } catch (error) {
+        statusText.textContent = "Upload failed. Please try again.";
+        console.error(error);
+      }
     };
   </script>
 
