--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
       }
     }
 
+    function getUserFromURL() {
+      const params = new URLSearchParams(window.location.search);
+      return params.get("user") || "";
+    }
+
     toggleCameraBtn.onclick = async () => {
       if (stream) {
         stopStreamTracks();
@@ -199,13 +204,20 @@
     };
 
     submitBtn.onclick = async () => {
+      const userEmail = getUserFromURL();
+      if (!userEmail) {
+        alert("Missing user email. Please access the page via a valid link.");
+        return;
+      }
+
       if (!recordedBlob) return alert("No recording to submit.");
 
       statusText.textContent = "Uploading...";
 
+      const fileName = `MOM_${userEmail}_${Date.now()}.webm`;
       const formData = new FormData();
-      const fileName = `moment-${Date.now()}.webm`;
       formData.append("file", recordedBlob, fileName);
+      formData.append("user_email", userEmail);
 
       try {
         await fetch("https://hook.eu2.make.com/u3erd1mk1hnfks7v4lsf8ev6w7zstbs1", {
