--- a/index.html
+++ b/index.html
@@ -214,10 +214,15 @@
 
       statusText.textContent = "Uploading...";
 
-      const fileName = `MOM_${userEmail}_${Date.now()}.webm`;
-      const formData = new FormData();
-      formData.append("file", recordedBlob, fileName);
-      formData.append("user_email", userEmail);
+      // Clean the email for the filename
+const cleanedEmail = userEmail.replace(/[@.]/g, "_");
+const fileName = `MOM_${cleanedEmail}_${Date.now()}.webm`;
+
+const formData = new FormData();
+formData.append("file", recordedBlob, fileName);        // ✅ clean name
+formData.append("user_email", userEmail);               // ✅ raw email (for Glide match)
+formData.append("cleaned_email", cleanedEmail);         // ✅ optional but useful
+
 
       try {
         await fetch("https://hook.eu2.make.com/u3erd1mk1hnfks7v4lsf8ev6w7zstbs1", {
